--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-prettier": "^2.6.2",
+    "live-server": "^1.2.0",
     "prettier": "^1.14.0",
     "uglify-js": "^3.4.6"
-  }
+  },
+  "dependencies": {}
 }
